--- a/web/src/app/streams/streams.component.html
+++ b/web/src/app/streams/streams.component.html
@@ -1,67 +1,64 @@
 <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
-<div class="content" fxLayout="row wrap" fxLayoutAlign="start">
+<div class="content" fxLayout="row wrap">
   <div
+    class="stream"
     *ngFor="let stream of streams; trackBy: trackBy"
-    fxLayout="row"
-    fxFlex="50"
-    fxFlex.lt-sm="100"
+    fxFlex.lt-sm="50"
+    fxFlex.sm="33.33"
+    fxFlex.gt-sm="25"
   >
-    <a
-      fxFlex="35"
+    <div
+      class="thumbnail"
       [routerLink]="['/stream', stream.id]"
-      fxLayout="column"
-      fxLayoutAlign="center"
+      lazyLoad
+      [video]="stream.id"
     >
-      <div class="thumbnail">
-        <img src="https://img.youtube.com/vi/{{ stream.id }}/mqdefault.jpg" />
-        <div class="duration">
-          <ng-container *ngIf="stream.end; else clock">
-            {{ stream.end | duration: stream.start }}
-          </ng-container>
-          <ng-template #clock>
-            {{ now$ | async | duration: stream.start }}
-          </ng-template>
-        </div>
+      <div class="duration">
+        <ng-container *ngIf="stream.end; else clock">
+          {{ stream.start | parseISO | duration: (stream.end | parseISO) }}
+        </ng-container>
+        <ng-template #clock>
+          {{ stream.start | parseISO | duration: (everySecond$ | async) }}
+        </ng-template>
       </div>
-    </a>
-    <div class="info" fxFlex="65" fxLayout="column">
-      <div fxFlex>
-        <div class="title" title="{{ stream.title }}">
-          {{ stream.title }}
-        </div>
-      </div>
-      <div
-        [ngClass]="{ viewers: true, red: !stream.end }"
-        fxLayout="row"
-        fxLayoutAlign="start center"
-      >
-        <mat-icon
-          class="view-icon"
-          svgIcon="eye"
-          [title]="stream.end ? '直播結束' : '正在直播'"
-        ></mat-icon>
-        <span class="avg-viewers" title="平均同接">
-          {{ (stream.avgViewers | number) || " ---- " }}
-        </span>
-        <span title="最高同接">
-          {{ (stream.maxViewers | number) || " ---- " }}
-        </span>
-      </div>
-      <div
-        class="time"
-        fxLayout="row"
-        fxLayoutAlign="start center"
-        *ngIf="findVTuber(stream.vtuberId); let vtuber"
-      >
-        <img
-          class="profile"
-          src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
-        />
-        <span class="name">{{ vtuber.name }}</span>
-        <span title="{{ stream.start | date: 'yyyy/MM/dd HH:mm:ss' }}">
-          {{ stream.start | distance }}
-        </span>
-      </div>
+    </div>
+    <div class="title" title="{{ stream.title }}">
+      {{ stream.title }}
+    </div>
+    <div
+      [ngClass]="{ viewers: true, red: !stream.end }"
+      fxLayout="row"
+      fxLayoutAlign="start center"
+    >
+      <mat-icon
+        class="view-icon"
+        svgIcon="eye"
+        [title]="stream.end ? '直播結束' : '正在直播'"
+      ></mat-icon>
+      <span class="avg-viewers" title="平均同接">
+        {{ (stream.avgViewers | number) || " ---- " }}
+      </span>
+      <span title="最高同接">
+        {{ (stream.maxViewers | number) || " ---- " }}
+      </span>
+    </div>
+    <div
+      class="time"
+      fxLayout="row"
+      fxLayoutAlign="start center"
+      *ngIf="findVTuber(stream.vtuberId); let vtuber"
+    >
+      <img class="profile" src="/assets/thumbnail/{{ stream.vtuberId }}.jpg" />
+      <span class="name">
+        {{
+          vtuber.name.length > 6
+            ? (vtuber.name | slice: 0:6) + ".."
+            : vtuber.name
+        }}
+      </span>
+      <span title="{{ stream.start | date: 'yyyy/MM/dd HH:mm:ss' }}">
+        {{ stream.start | parseISO | distance: (everyMinute$ | async) }}
+      </span>
     </div>
   </div>
 </div>
