--- a/web/src/app/vtubers/vtubers.component.html
+++ b/web/src/app/vtubers/vtubers.component.html
@@ -139,7 +139,7 @@
     </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns(); sticky: true"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns()"></tr>
+  <tr mat-footer-row *matFooterRowDef="displayedColumns()"></tr>
 </table>
