--- a/web/src/app/streams/streams.component.scss
+++ b/web/src/app/streams/streams.component.scss
@@ -31,6 +31,28 @@ $config: mat-typography-config();
     font-size: mat-font-size($config, caption);
     font-weight: mat-font-weight($config, body-2);
   }
+
+  &:hover {
+    .icon {
+      display: block;
+    }
+  }
+
+  .icon {
+    display: none;
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 28px;
+    width: 28px;
+
+    mat-icon {
+      padding: 2px;
+      margin: 0px;
+    }
+  }
 }
 
 .stream {
