feat(web): stream data pagination

--- a/web/src/app/streams-detail/_streams-detail.theme.scss
+++ b/web/src/app/streams-detail/_streams-detail.theme.scss
@@ -3,7 +3,7 @@
 @mixin streams-detail-theme($theme) {
   $foreground: map-get($theme, foreground);
 
-  .title {
+  .title, .name {
     color: mat-color($foreground, text);
   }
 }
