feat(web): display git commit and links hash in footer

--- a/web/src/app/footer/footer.component.scss
+++ b/web/src/app/footer/footer.component.scss
@@ -2,6 +2,13 @@
 
 $config: mat-typography-config();
 
+.commit {
+  text-decoration: none;
+  font-size: mat-font-size($config, button);
+  font-weight: mat-font-weight($config, button);
+  user-select: none;
+}
+
 .link {
   text-decoration: none;
   font-size: mat-font-size($config, button);
@@ -10,9 +17,9 @@ $config: mat-typography-config();
 }
 
 .separator {
+  padding: 0 8px;
   font-size: mat-font-size($config, button);
   font-weight: mat-font-weight($config, button);
-  padding: 0 8px;
   user-select: none;
 }
 
@@ -20,7 +27,7 @@ $config: mat-typography-config();
   flex: 1 0;
 }
 
-.navbar {
+.footer {
   padding: 0 20px;
   height: 64px;
   position: sticky;
