--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -1,8 +1,10 @@
 <nav class="navbar" fxLayoutAlign="start center">
   <mat-icon class="logo link" svgIcon="logo"></mat-icon>
+  <span class="link">HoloStats</span>
+  <span class="spacer"></span>
   <a class="link" routerLink="/vtuber">VTuber</a>
-  <span class="link">/</span>
+  <span class="separator">/</span>
   <a class="link" routerLink="/stream">直播</a>
-  <span class="link">/</span>
+  <span class="separator">/</span>
   <a class="link" routerLink="/settings">設置</a>
 </nav>
