--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -3,6 +3,7 @@
 @import "./theme";
 @import "./app/area-chart/area-chart.theme";
 @import "./app/navbar/navbar.theme";
+@import "./app/footer/footer.theme";
 @import "./app/streams-detail/streams-detail.theme";
 @import "./app/streams/streams.theme";
 @import "./app/vtubers-detail/vtubers-detail.theme";
@@ -23,6 +24,7 @@
   @include mat-slide-toggle-theme($theme);
 
   @include area-chart-theme($theme);
+  @include footer-theme($theme);
   @include navbar-theme($theme);
   @include streams-detail-theme($theme);
   @include streams-theme($theme);
