--- a/web/src/app/vtubers/vtubers.component.html
+++ b/web/src/app/vtubers/vtubers.component.html
@@ -33,7 +33,7 @@
       {{ row.youtubeStats.subs | number }}
     </td>
     <td mat-footer-cell *matFooterCellDef>
-      {{ totalYoutubeSubs() | number }}
+      {{ totalYoutubeSubs | number }}
     </td>
   </ng-container>
 
@@ -49,9 +49,27 @@
     <td
       mat-footer-cell
       *matFooterCellDef
-      [coloredNumber]="totalYoutubeDailySubs()"
+      [coloredNumber]="totalYoutubeDailySubs"
     >
-      {{ totalYoutubeDailySubs() | number }}
+      {{ totalYoutubeDailySubs | number }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="youtubeWeeklySubs">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>周增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.youtubeStats.weeklySubs"
+    >
+      {{ row.youtubeStats.weeklySubs | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalYoutubeWeeklySubs"
+    >
+      {{ totalYoutubeWeeklySubs | number }}
     </td>
   </ng-container>
 
@@ -61,7 +79,7 @@
       {{ row.youtubeStats.views | number }}
     </td>
     <td mat-footer-cell *matFooterCellDef>
-      {{ totalYoutubeViews() | number }}
+      {{ totalYoutubeViews | number }}
     </td>
   </ng-container>
 
@@ -77,9 +95,27 @@
     <td
       mat-footer-cell
       *matFooterCellDef
-      [coloredNumber]="totalYoutubeDailyViews()"
+      [coloredNumber]="totalYoutubeDailyViews"
     >
-      {{ totalYoutubeDailyViews() | number }}
+      {{ totalYoutubeDailyViews | number }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="youtubeWeeklyViews">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>周增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.youtubeStats.weeklyViews"
+    >
+      {{ row.youtubeStats.weeklyViews | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalYoutubeWeeklyViews"
+    >
+      {{ totalYoutubeWeeklyViews | number }}
     </td>
   </ng-container>
 
@@ -89,7 +125,7 @@
       {{ row.bilibiliStats.subs | number }}
     </td>
     <td mat-footer-cell *matFooterCellDef>
-      {{ totalBilibiliSubs() | number }}
+      {{ totalBilibiliSubs | number }}
     </td>
   </ng-container>
 
@@ -105,9 +141,27 @@
     <td
       mat-footer-cell
       *matFooterCellDef
-      [coloredNumber]="totalBilibiliDailySubs()"
+      [coloredNumber]="totalBilibiliDailySubs"
     >
-      {{ totalBilibiliDailySubs() | number }}
+      {{ totalBilibiliDailySubs | number }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="bilibiliWeeklySubs">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>周增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.bilibiliStats.weeklySubs"
+    >
+      {{ row.bilibiliStats.weeklySubs | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalBilibiliWeeklySubs"
+    >
+      {{ totalBilibiliWeeklySubs | number }}
     </td>
   </ng-container>
 
@@ -117,7 +171,7 @@
       {{ row.bilibiliStats.views | number }}
     </td>
     <td mat-footer-cell *matFooterCellDef>
-      {{ totalBilibiliViews() | number }}
+      {{ totalBilibiliViews | number }}
     </td>
   </ng-container>
 
@@ -133,13 +187,31 @@
     <td
       mat-footer-cell
       *matFooterCellDef
-      [coloredNumber]="totalBilibiliDailyViews()"
+      [coloredNumber]="totalBilibiliDailyViews"
     >
-      {{ totalBilibiliDailyViews() | number }}
+      {{ totalBilibiliDailyViews | number }}
     </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns(); sticky: true"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns()"></tr>
-  <tr mat-footer-row *matFooterRowDef="displayedColumns()"></tr>
+  <ng-container matColumnDef="bilibiliWeeklyViews">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>周增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.bilibiliStats.weeklyViews"
+    >
+      {{ row.bilibiliStats.weeklyViews | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalBilibiliWeeklyViews"
+    >
+      {{ totalBilibiliWeeklyViews | number }}
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
 </table>
