feat(web): quotes page

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -6,5 +6,7 @@
   <span class="separator">/</span>
   <a class="link" routerLink="/stream">直播</a>
   <span class="separator">/</span>
+  <a class="link" routerLink="/quote">名言</a>
+  <span class="separator">/</span>
   <a class="link" routerLink="/settings">設置</a>
 </nav>
