--- a/web/src/app/vtubers/vtubers.component.html
+++ b/web/src/app/vtubers/vtubers.component.html
@@ -73,6 +73,24 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="youtubeMonthlySubs">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.youtubeStats.monthlySubs"
+    >
+      {{ row.youtubeStats.monthlySubs | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalYoutubeMonthlySubs"
+    >
+      {{ totalYoutubeMonthlySubs | number }}
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="youtubeViews">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>YouTube 觀看</th>
     <td mat-cell *matCellDef="let row">
@@ -116,6 +134,24 @@
       [coloredNumber]="totalYoutubeWeeklyViews"
     >
       {{ totalYoutubeWeeklyViews | number }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="youtubeMonthlyViews">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.youtubeStats.monthlyViews"
+    >
+      {{ row.youtubeStats.monthlyViews | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalYoutubeMonthlyViews"
+    >
+      {{ totalYoutubeMonthlyViews | number }}
     </td>
   </ng-container>
 
@@ -165,6 +201,24 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="bilibiliMonthlySubs">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.bilibiliStats.monthlySubs"
+    >
+      {{ row.bilibiliStats.monthlySubs | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalBilibiliMonthlySubs"
+    >
+      {{ totalBilibiliMonthlySubs | number }}
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="bilibiliViews">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Bilibili 觀看</th>
     <td mat-cell *matCellDef="let row">
@@ -208,6 +262,24 @@
       [coloredNumber]="totalBilibiliWeeklyViews"
     >
       {{ totalBilibiliWeeklyViews | number }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="bilibiliMonthlyViews">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
+    <td
+      mat-cell
+      *matCellDef="let row"
+      [coloredNumber]="row.bilibiliStats.monthlyViews"
+    >
+      {{ row.bilibiliStats.monthlyViews | number }}
+    </td>
+    <td
+      mat-footer-cell
+      *matFooterCellDef
+      [coloredNumber]="totalBilibiliMonthlyViews"
+    >
+      {{ totalBilibiliMonthlyViews | number }}
     </td>
   </ng-container>
 
