--- a/web/src/app/streams/streams.component.scss
+++ b/web/src/app/streams/streams.component.scss
@@ -6,6 +6,12 @@ $config: mat-typography-config();
   padding: 0 4px;
 }
 
+.date-label {
+  font-size: mat-font-size($config, title);
+  font-weight: mat-font-weight($config, caption);
+  padding: 8px 16px;
+}
+
 .updated-at {
   font-size: mat-font-size($config, caption);
   font-weight: mat-font-weight($config, caption);
