--- a/web/src/app/vtubers-list/_vtubers-list.theme.scss
+++ b/web/src/app/vtubers-list/_vtubers-list.theme.scss
@@ -1,18 +1,13 @@
 @import "~@angular/material/theming";
 
-@mixin streams-theme($theme) {
+@mixin vtubers-list-theme($theme) {
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
 
-  .title:after {
-    background: linear-gradient(
-      to right,
-      transparent,
-      mat-color($background, card) 100%
-    );
+  .mat-column-profile {
+    box-shadow: 12px 0px 20px map-get($background, "card");
   }
 
-  .viewers,
   .updated-at {
     color: mat-color($foreground, secondary-text);
   }
