feat(vtuber-list): tab button

--- a/web/src/app/vtubers-list/_vtubers-list.theme.scss
+++ b/web/src/app/vtubers-list/_vtubers-list.theme.scss
@@ -11,4 +11,14 @@
   .updated-at {
     color: mat-color($foreground, secondary-text);
   }
+
+  .toolbar {
+    .tab-button {
+      color: mat-color($foreground, text);
+    }
+
+    .tab-button.active:after {
+      border-bottom: 1px solid mat-color($foreground, text);
+    }
+  }
 }
