--- a/web/src/app/vtubers-list/vtubers-list.component.html
+++ b/web/src/app/vtubers-list/vtubers-list.component.html
@@ -1,14 +1,24 @@
-<div class="sticky updated-at">
-  更新于 {{ updatedAt | date: "MM/dd HH:mm" }}
+<div class="sticky toolbar" fxLayout="row" fxLayoutAlign="start center">
+  <a
+    class="tab-button"
+    [class.active]="youtubeSelected"
+    [routerLink]="['/vtuber']"
+    [queryParams]="{ tab: 'youtube' }"
+  >
+    YouTube
+  </a>
+  <a
+    class="tab-button"
+    [class.active]="bilibiliSelected"
+    [routerLink]="['/vtuber']"
+    [queryParams]="{ tab: 'bilibili' }"
+  >
+    Bilibili
+  </a>
+  <span class="spacer"></span>
+  <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
 </div>
-<table
-  mat-table
-  [dataSource]="dataSource"
-  matSort
-  matSortActive="youtubeSubs"
-  matSortDisableClear
-  matSortDirection="desc"
->
+<table mat-table [dataSource]="dataSource" matSort matSortDisableClear>
   <ng-container matColumnDef="profile" sticky>
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let row">
@@ -284,6 +294,10 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns"
+    [hidden]="hideRows.includes(row.id)"
+  ></tr>
   <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
 </table>
