feat(web): import vtuber list from json file

--- a/web/src/app/settings/settings.component.html
+++ b/web/src/app/settings/settings.component.html
@@ -3,12 +3,12 @@
   <span class="spacer"></span>
   <mat-slide-toggle
     [checked]="config.enableDarkMode"
-    (toggleChange)="toggleDarkTheme()"
+    (toggleChange)="config.toggleDarkMode()"
   ></mat-slide-toggle>
 </h4>
 
 <h4 class="settings-row mat-subheading-2">
-  已選取的 VTuber <b>({{ config.selectedVTubers.length }}/{{ count }})</b>：
+  已選取的 VTuber <b>({{ config.selectedVTubers.size }}/{{ count }})</b>：
 </h4>
 
 <div class="tree-row">
