--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -2,7 +2,7 @@
   <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
     <div class="info" fxFlex="40" fxFlex.lt-sm="100">
       <img class="profile" src="/assets/profiles/{{ vtuber.id }}.jpg" />
-      <div class="name">{{ vtuber.name }}</div>
+      <div class="name">{{ findVTuber(vtuber.id).name }}</div>
     </div>
     <div
       class="number"
