--- a/web/src/app/vtubers-list/vtubers-list.component.html
+++ b/web/src/app/vtubers-list/vtubers-list.component.html
@@ -33,7 +33,7 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>名稱</th>
-    <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+    <td mat-cell *matCellDef="let row">{{ findVTuber(row.id).name }}</td>
     <td mat-footer-cell *matFooterCellDef>總計</td>
   </ng-container>
 
