--- a/web/src/app/navbar/_navbar.theme.scss
+++ b/web/src/app/navbar/_navbar.theme.scss
@@ -2,8 +2,10 @@
 
 @mixin navbar-theme($theme) {
   $foreground: map-get($theme, foreground);
+  $background: map-get($theme, background);
 
-  .navbar .link {
-    color: mat-color($foreground, text);
+  .navbar {
+    background-color: mat-color($background, card);
+    border-bottom: solid 1px mat-color($foreground, divider);
   }
 }
