--- a/web/src/app/youtube-channel/youtube-channel.component.html
+++ b/web/src/app/youtube-channel/youtube-channel.component.html
@@ -1,25 +1,16 @@
 <div class="toolbar" fxLayout="row" fxLayoutAlign="start center">
-  <a
-    class="tab-button"
-    [class.active]="youtubeSelected"
-    [routerLink]="['/vtuber']"
-    [queryParams]="{ tab: 'youtube' }"
-  >
-    YouTube
-  </a>
-  <a
-    class="tab-button"
-    [class.active]="bilibiliSelected"
-    [routerLink]="['/vtuber']"
-    [queryParams]="{ tab: 'bilibili' }"
-  >
-    Bilibili
-  </a>
   <span class="spacer"></span>
   <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
 </div>
 <div class="table-container">
-  <table mat-table [dataSource]="dataSource" matSort matSortDisableClear>
+  <table
+    mat-table
+    [dataSource]="dataSource"
+    matSort
+    matSortActive="youtubeSubs"
+    matSortDirection="desc"
+    matSortDisableClear
+  >
     <ng-container matColumnDef="profile">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let row">
@@ -49,7 +40,7 @@
     </ng-container>
 
     <ng-container matColumnDef="youtubeDailySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
       <td
         mat-cell
         *matCellDef="let row"
@@ -67,7 +58,7 @@
     </ng-container>
 
     <ng-container matColumnDef="youtubeWeeklySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>周增</th>
       <td
         mat-cell
         *matCellDef="let row"
@@ -163,134 +154,6 @@
         [coloredNumber]="totalYoutubeMonthlyViews"
       >
         {{ totalYoutubeMonthlyViews | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliSubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Bilibili 訂閱</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.bilibiliStats.subs | number }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef>
-        {{ totalBilibiliSubs | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliDailySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.bilibiliStats.dailySubs"
-      >
-        {{ row.bilibiliStats.dailySubs | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalBilibiliDailySubs"
-      >
-        {{ totalBilibiliDailySubs | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliWeeklySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.bilibiliStats.weeklySubs"
-      >
-        {{ row.bilibiliStats.weeklySubs | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalBilibiliWeeklySubs"
-      >
-        {{ totalBilibiliWeeklySubs | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliMonthlySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.bilibiliStats.monthlySubs"
-      >
-        {{ row.bilibiliStats.monthlySubs | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalBilibiliMonthlySubs"
-      >
-        {{ totalBilibiliMonthlySubs | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Bilibili 觀看</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.bilibiliStats.views | number }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef>
-        {{ totalBilibiliViews | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliDailyViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.bilibiliStats.dailyViews"
-      >
-        {{ row.bilibiliStats.dailyViews | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalBilibiliDailyViews"
-      >
-        {{ totalBilibiliDailyViews | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliWeeklyViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.bilibiliStats.weeklyViews"
-      >
-        {{ row.bilibiliStats.weeklyViews | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalBilibiliWeeklyViews"
-      >
-        {{ totalBilibiliWeeklyViews | number }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="bilibiliMonthlyViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.bilibiliStats.monthlyViews"
-      >
-        {{ row.bilibiliStats.monthlyViews | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalBilibiliMonthlyViews"
-      >
-        {{ totalBilibiliMonthlyViews | number }}
       </td>
     </ng-container>
 
