fix(web): typo 周 -> 週

--- a/web/src/app/youtube-channel/youtube-channel.component.html
+++ b/web/src/app/youtube-channel/youtube-channel.component.html
@@ -58,7 +58,7 @@
     </ng-container>
 
     <ng-container matColumnDef="youtubeWeeklySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>周增</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
       <td
         mat-cell
         *matCellDef="let row"
